--- a/alembic.ini
+++ b/alembic.ini
@@ -2,7 +2,7 @@
 
 [alembic]
 # path to migration scripts
-script_location = project
+script_location = alembic
 
 # template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
 # Uncomment the line below if you want the files to be prepended with date and time
@@ -60,8 +60,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://postgres:postgres@localhost:5433/postgres
-
+sqlalchemy.url = mysql+pymysql://thangvo:WoKfeGkjICCvil6@10.97.11.122:3306/in
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
