--- a/alembic.ini
+++ b/alembic.ini
@@ -60,7 +60,8 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = mysql+pymysql://thangvo:WoKfeGkjICCvil6@10.97.11.122:3306/in
+sqlalchemy.url = mysql+pymysql://thangvo:thangvo123@localhost:3306/test_db
+# sqlalchemy.url = mysql+pymysql://thangvo:WoKfeGkjICCvil6@10.97.11.122:3306/in
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
