--- a/alembic.ini
+++ b/alembic.ini
@@ -58,7 +58,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 
 # the output encoding used when revision files
 # are written from script.py.mako
-# output_encoding = utf-8
+output_encoding = utf-8
 
 sqlalchemy.url = mysql+pymysql://thangvo:thangvo123@localhost:3306/test_db
 # sqlalchemy.url = mysql+pymysql://thangvo:WoKfeGkjICCvil6@10.97.11.122:3306/in
