--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       - "8080:8080"
       - "7077:7077"
     volumes:
-      - spark-data:/opt/spark/data
+      - ./Spark/Scripts:/opt/spark/scripts
 
   spark-worker:
     image: bitnami/spark:3.5.5
