--- a/.env
+++ b/.env
@@ -14,6 +14,10 @@ STAG_KIM_HOST=10.101.222.10
 STAG_KIM_USER=thangvo
 STAG_KIM_PASSWORD=Thang@2024
 
+PROD_KIM_HOST=10.101.150.110
+PROD_KIM_USER=thangvo
+PROD_KIM_PASSWORD=Thang@2024
+
 # Local MySQL Database
 LOCAL_MYSQL_HOST=localhost
 LOCAL_MYSQL_PORT=3306
