--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,9 @@ services:
       - "8080:8080"
       - "7077:7077"
     volumes:
-      - ./Spark/Scripts:/opt/spark/scripts
+      - ./Spark/Scripts:/opt/bitnami/spark/scripts
+    networks:
+      - app-network    # Add this line
 
   spark-worker:
     image: bitnami/spark:3.2.4
@@ -33,6 +35,8 @@ services:
       - SPARK_MASTER_URL=spark://spark-master:7077
     depends_on:
       - spark-master
+    networks:
+      - app-network    # Add this line
 
   postgres:
     image: postgres:13
