feat(database): add MSSQL support and test scripts
Add MSSQL configuration to DatabaseConfig class and include test scripts for database connections. Update .env with MSSQL credentials and modify bash_commands.md for DAG testing. Introduce new scripts for transferring data from MySQL to MSSQL.

--- a/.env
+++ b/.env
@@ -24,3 +24,11 @@ LOCAL_MYSQL_PORT=3306
 LOCAL_MYSQL_DATABASE=test_db
 LOCAL_MYSQL_USER=thangvo
 LOCAL_MYSQL_PASSWORD=thangvo123
+
+# MSSQL Server Configuration
+MSSQL_HOST=10.96.21.130\PRODDW
+MSSQL_PORT=1433
+MSSQL_DATABASE=PROD_Data
+MSSQL_USERNAME=dba1
+MSSQL_PASSWORD=12345678
+MSSQL_DRIVER=ODBC Driver 17 for SQL Server
