--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,9 @@ services:
       - app-network
 
   spark-master:
-    image: bitnami/spark:3.2.4
+    build:
+      context: .
+      dockerfile: Dockerfile.spark
     container_name: spark-master
     environment:
       - SPARK_MODE=master
@@ -25,10 +27,12 @@ services:
     volumes:
       - ./Spark/Scripts:/opt/bitnami/spark/scripts
     networks:
-      - app-network    # Add this line
+      - app-network
 
   spark-worker:
-    image: bitnami/spark:3.2.4
+    build:
+      context: .
+      dockerfile: Dockerfile.spark
     container_name: spark-worker
     environment:
       - SPARK_MODE=worker
@@ -36,7 +40,7 @@ services:
     depends_on:
       - spark-master
     networks:
-      - app-network    # Add this line
+      - app-network
 
   postgres:
     image: postgres:13
@@ -53,7 +57,9 @@ services:
       - app-network
 
   airflow-webserver:
-    image: apache/airflow:2.7.1
+    build:
+      context: .
+      dockerfile: Dockerfile.airflow
     container_name: airflow-webserver
     environment:
       - AIRFLOW__CORE__EXECUTOR=LocalExecutor
@@ -76,7 +82,9 @@ services:
       - postgres
 
   airflow-scheduler:
-    image: apache/airflow:2.7.1
+    build:
+      context: .
+      dockerfile: Dockerfile.airflow
     container_name: airflow-scheduler
     environment:
       - AIRFLOW__CORE__EXECUTOR=LocalExecutor
