--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - "8080:8080"
       - "7077:7077"
     volumes:
-      - ./Spark/Scripts:/opt/bitnami/spark/scripts
+      - ./Spark/Scripts:/opt/spark/scripts  # Changed from /opt/bitnami/spark/scripts
     networks:
       - app-network
 
@@ -37,6 +37,8 @@ services:
     environment:
       - SPARK_MODE=worker
       - SPARK_MASTER_URL=spark://spark-master:7077
+    volumes:
+      - ./Spark/Scripts:/opt/spark/scripts  # Added volume mount to worker
     depends_on:
       - spark-master
     networks:
