--- a/Dockerfile.spark
+++ b/Dockerfile.spark
@@ -1,19 +1,8 @@
 FROM bitnami/spark:3.2.4
 
 USER root
-
-# Install Python 3.8 dependencies and Java 11
 RUN apt-get update && \
-    apt-get install -y wget build-essential zlib1g-dev libncurses5-dev libgdbm-dev libnss3-dev libssl-dev libreadline-dev libffi-dev && \
-    wget https://www.python.org/ftp/python/3.8.18/Python-3.8.18.tgz && \
-    tar -xf Python-3.8.18.tgz && \
-    cd Python-3.8.18 && \
-    ./configure --enable-optimizations && \
-    make -j $(nproc) && \
-    make altinstall && \
-    cd .. && rm -rf Python-3.8.18* && \
-    ln -sf /usr/local/bin/python3.8 /usr/bin/python3 && \
-    ln -sf /usr/local/bin/pip3.8 /usr/bin/pip3 && \
+    apt-get install -y wget gcc python3-dev build-essential && \
     wget https://download.java.net/openjdk/jdk11/ri/openjdk-11+28_linux-x64_bin.tar.gz && \
     tar -xvzf openjdk-11+28_linux-x64_bin.tar.gz && \
     mv jdk-11 /opt/ && \
@@ -29,11 +18,10 @@ RUN mkdir -p /opt/bitnami/spark/conf && \
     chown -R 1001:root /opt/bitnami && \
     chmod -R g+rwX /opt/bitnami
 
-# Copy requirements file and set permissions
+# Copy requirements and install as root
 COPY requirements-spark.txt /opt/bitnami/spark/requirements.txt
-RUN chown 1001:root /opt/bitnami/spark/requirements.txt && \
-    chmod 644 /opt/bitnami/spark/requirements.txt
+RUN chown -R 1001:root /opt/bitnami/spark && \
+    chmod -R 755 /opt/bitnami/spark && \
+    pip install --no-cache-dir -r /opt/bitnami/spark/requirements.txt
 
-# Switch to non-root user and install Python requirements
 USER 1001
-RUN pip install --no-cache-dir -r /opt/bitnami/spark/requirements.txt
