build: upgrade pyspark to 3.4.1 and update related configurations
Upgrade pyspark version from 3.2.4 to 3.4.1 in requirements files and Dockerfile.spark. Update Spark configurations to include PYSPARK_PYTHON and PYSPARK_DRIVER_PYTHON settings. Simplify dependency installation scripts and ensure Python 3.12 compatibility. Clean up unnecessary configurations in Spark and Airflow scripts.

--- a/Dockerfile.spark
+++ b/Dockerfile.spark
@@ -1,8 +1,17 @@
-FROM bitnami/spark:3.2.4
+FROM bitnami/spark:3.4.1
 
 USER root
 RUN apt-get update && \
-    apt-get install -y wget gcc python3-dev build-essential && \
+    apt-get install -y wget gcc python3-dev build-essential software-properties-common && \
+    wget https://www.python.org/ftp/python/3.12.3/Python-3.12.3.tgz && \
+    tar -xf Python-3.12.3.tgz && \
+    cd Python-3.12.3 && \
+    ./configure --enable-optimizations && \
+    make -j $(nproc) && \
+    make altinstall && \
+    cd .. && rm -rf Python-3.12.3* && \
+    ln -sf /usr/local/bin/python3.12 /usr/bin/python3 && \
+    ln -sf /usr/local/bin/pip3.12 /usr/bin/pip3 && \
     wget https://download.java.net/openjdk/jdk11/ri/openjdk-11+28_linux-x64_bin.tar.gz && \
     tar -xvzf openjdk-11+28_linux-x64_bin.tar.gz && \
     mv jdk-11 /opt/ && \
@@ -10,18 +19,20 @@ RUN apt-get update && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
-# Set JAVA_HOME and permissions for Bitnami paths
+# Set JAVA_HOME and Python paths in spark-env.sh
 RUN mkdir -p /opt/bitnami/spark/conf && \
     touch /opt/bitnami/spark/conf/spark-env.sh && \
     echo 'export JAVA_HOME=/opt/jdk-11' >> /opt/bitnami/spark/conf/spark-env.sh && \
     echo 'export PATH=$JAVA_HOME/bin:$PATH' >> /opt/bitnami/spark/conf/spark-env.sh && \
+    echo 'export PYSPARK_PYTHON=/usr/bin/python3' >> /opt/bitnami/spark/conf/spark-env.sh && \
+    echo 'export PYSPARK_DRIVER_PYTHON=/usr/bin/python3' >> /opt/bitnami/spark/conf/spark-env.sh && \
     chown -R 1001:root /opt/bitnami && \
     chmod -R g+rwX /opt/bitnami
 
-# Copy requirements and install as root
 COPY requirements-spark.txt /opt/bitnami/spark/requirements.txt
 RUN chown -R 1001:root /opt/bitnami/spark && \
     chmod -R 755 /opt/bitnami/spark && \
-    pip install --no-cache-dir -r /opt/bitnami/spark/requirements.txt
+    pip3 install --upgrade pip && \
+    pip3 install --no-cache-dir -r /opt/bitnami/spark/requirements.txt
 
 USER 1001
