feat: add MySQL and Telegram integration with Spark and Airflow
This commit introduces MySQL and Telegram integration into the Spark and Airflow setup. Key changes include:
- Added MySQL connector and Telegram provider dependencies in requirements.
- Created new DAGs for MySQL connection testing and Telegram notifications.
- Updated Dockerfile.spark to include MySQL connector and Python path adjustments.
- Added new test scripts for MySQL connection and file permissions.
- Updated docker-compose.yml to include Spark config volume mounts.

--- a/Dockerfile.spark
+++ b/Dockerfile.spark
@@ -11,12 +11,18 @@ RUN apt-get update && \
     make -j $(nproc) && \
     make install && \
     cd .. && rm -rf Python-3.12.3* && \
+    mkdir -p /opt/python/bin && \
     rm -f /opt/bitnami/python/bin/python3 && \
     rm -f /opt/bitnami/python/bin/pip3 && \
-    ln -sf /usr/local/bin/python3.12 /opt/bitnami/python/bin/python3 && \
-    ln -sf /usr/local/bin/pip3.12 /opt/bitnami/python/bin/pip3 && \
+    ln -sf /usr/local/bin/python3.12 /opt/python/bin/python3 && \
+    ln -sf /usr/local/bin/pip3.12 /opt/python/bin/pip3 && \
     python3 -m ensurepip && \
-    pip3 install --upgrade pip
+    pip3 install --upgrade pip && \
+    # Download and install specific pip version
+    wget https://bootstrap.pypa.io/get-pip.py -O get-pip.py && \
+    python3 get-pip.py pip==23.3.1 && \
+    # Install MySQL connector
+    pip3 install mysql-connector-python==8.0.33
 
 # Install Java 11
 RUN wget https://download.java.net/openjdk/jdk11/ri/openjdk-11+28_linux-x64_bin.tar.gz && \
@@ -27,18 +33,18 @@ RUN wget https://download.java.net/openjdk/jdk11/ri/openjdk-11+28_linux-x64_bin.
     rm -rf /var/lib/apt/lists/*
 
 # Set JAVA_HOME and Python paths in spark-env.sh
-RUN mkdir -p /opt/bitnami/spark/conf && \
-    touch /opt/bitnami/spark/conf/spark-env.sh && \
-    echo 'export JAVA_HOME=/opt/jdk-11' >> /opt/bitnami/spark/conf/spark-env.sh && \
-    echo 'export PATH=$JAVA_HOME/bin:$PATH' >> /opt/bitnami/spark/conf/spark-env.sh && \
-    echo 'export PYSPARK_PYTHON=/opt/bitnami/python/bin/python3' >> /opt/bitnami/spark/conf/spark-env.sh && \
-    echo 'export PYSPARK_DRIVER_PYTHON=/opt/bitnami/python/bin/python3' >> /opt/bitnami/spark/conf/spark-env.sh
+RUN mkdir -p /opt/spark/conf && \
+    touch /opt/spark/conf/spark-env.sh && \
+    echo 'export JAVA_HOME=/opt/jdk-11' >> /opt/spark/conf/spark-env.sh && \
+    echo 'export PATH=$JAVA_HOME/bin:$PATH' >> /opt/spark/conf/spark-env.sh && \
+    echo 'export PYSPARK_PYTHON=/opt/python/bin/python3' >> /opt/spark/conf/spark-env.sh && \
+    echo 'export PYSPARK_DRIVER_PYTHON=/opt/python/bin/python3' >> /opt/spark/conf/spark-env.sh
 
 # Set up Python environment and install requirements
-COPY requirements-spark.txt /opt/bitnami/spark/requirements.txt
-RUN mkdir -p /opt/bitnami/python && \
-    chown -R 1001:root /opt/bitnami && \
-    chmod -R 755 /opt/bitnami && \
-    /opt/bitnami/python/bin/pip3 install --no-cache-dir -r /opt/bitnami/spark/requirements.txt
+COPY requirements-spark.txt /opt/spark/requirements.txt
+RUN mkdir -p /opt/python && \
+    chown -R 1001:root /opt && \
+    chmod -R 755 /opt && \
+    /opt/python/bin/pip3 install --no-cache-dir -r /opt/spark/requirements.txt
 
 USER 1001
