--- a/requirements-airflow.txt
+++ b/requirements-airflow.txt
@@ -2,3 +2,5 @@ requests==2.31.0
 pandas==2.0.3
 apache-airflow-providers-apache-spark==4.1.5
 pyspark==3.4.1
+apache-airflow-providers-telegram==4.7.2
+mysql-connector-python==8.4.0
