feat(database): add remote MySQL configuration and JDBC URL
Add support for remote MySQL database by introducing new environment variables and configuration in the database.py file. This allows the application to connect to a remote MySQL instance alongside the existing MSSQL and local MySQL configurations.

--- a/.env
+++ b/.env
@@ -32,3 +32,9 @@ MSSQL_DATABASE=PROD_Data
 MSSQL_USERNAME=dba1
 MSSQL_PASSWORD=12345678
 MSSQL_DRIVER=ODBC Driver 17 for SQL Server
+
+REMOTE_MYSQL_HOST=i-ixc.h.filess.io
+REMOTE_MYSQL_DATABASE=ThangVo_realizeper
+REMOTE_MYSQL_PORT=61002
+REMOTE_MYSQL_USER=ThangVo_realizeper
+REMOTE_MYSQL_PASSWORD=ce1c6ad5c8924898d9014db8b9afd31e77682834
