feat: add data pipeline DAG, NASA API script, and update SMTP config
- Added a new DAG `Code-as-Configuration_DAG.py` for data pipeline with email notifications.
- Created `testAPI.py` to fetch and save NASA's Astronomy Picture of the Day.
- Updated `airflow.cfg` with Gmail SMTP settings for email notifications.
- Modified `install_python.bat` to include Python version check for Airflow webserver.

--- a/airflow/config/airflow.cfg
+++ b/airflow/config/airflow.cfg
@@ -1646,58 +1646,13 @@ default_email_on_failure = True
 ssl_context = default
 
 [smtp]
-# If you want airflow to send emails on retries, failure, and you want to use
-# the airflow.utils.email.send_email_smtp function, you have to configure an
-# smtp server here
-
-#
-# Variable: AIRFLOW__SMTP__SMTP_HOST
-#
-smtp_host = localhost
-
-#
-# Variable: AIRFLOW__SMTP__SMTP_STARTTLS
-#
+smtp_host = smtp.gmail.com
 smtp_starttls = True
-
-#
-# Variable: AIRFLOW__SMTP__SMTP_SSL
-#
 smtp_ssl = False
-
-#
-# Example: smtp_user = airflow
-#
-# Variable: AIRFLOW__SMTP__SMTP_USER
-#
-# smtp_user = 
-
-#
-# Example: smtp_password = airflow
-#
-# Variable: AIRFLOW__SMTP__SMTP_PASSWORD
-#
-# smtp_password = 
-
-#
-# Variable: AIRFLOW__SMTP__SMTP_PORT
-#
-smtp_port = 25
-
-#
-# Variable: AIRFLOW__SMTP__SMTP_MAIL_FROM
-#
-smtp_mail_from = airflow@example.com
-
-#
-# Variable: AIRFLOW__SMTP__SMTP_TIMEOUT
-#
-smtp_timeout = 30
-
-#
-# Variable: AIRFLOW__SMTP__SMTP_RETRY_LIMIT
-#
-smtp_retry_limit = 5
+smtp_port = 587
+smtp_mail_from = vmthang914@gmail.com
+smtp_user = vmthang914@gmail.com
+smtp_password = tzca yify nvsm slaz
 
 [sentry]
 # Sentry (https://docs.sentry.io) integration. Here you can supply
